--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -24,7 +24,7 @@
     border-left: 1px solid var(--gray-100);
     background-color: var(--white);
     transform: rotate(45deg);
-    right: 7%;
+    right: 13px;
 
 }
 
