--- a/src/styles/dashboard/dashboard.scss
+++ b/src/styles/dashboard/dashboard.scss
@@ -4,4 +4,15 @@
     border-radius: 0.2rem;
     border: 1px solid var(--gray-300);
     background-color: var( --white);
+
+    .hide-tr{
+        visibility: hidden;
+        overflow: hidden;
+        height: 0px;
+        td{
+            height: 0px;
+        }
+      }
+
 }
+
