--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -1,6 +1,8 @@
 .Footer-timelyne{
     font-weight: 500;
     font-size: 1.5rem;
+    height: 100px;
+    
 }
 .Footer-ti{
     color: #3182CE
@@ -14,3 +16,4 @@
 .Footer-ne{
     color: orange;
 }
+
