--- a/src/styles/dashboard/dashboard.scss
+++ b/src/styles/dashboard/dashboard.scss
@@ -1,5 +1,5 @@
 #dashboard{
-    margin: 2rem;
+    margin: 2rem 2rem 4rem 2rem;
     padding: 1rem;
     border-radius: 0.2rem;
     border: 1px solid var(--gray-300);
