Button Filter, Dash...Header e Footer

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -48,6 +48,11 @@ a{
     text-decoration:none;
 }
 
+#escopo{
+    height: calc(100vh - 100%);
+    min-height: calc(100vh - 170px);
+}
+
 /*
 media para acessibilidade
 font padrão 16 px;
