--- a/src/components/AsideBox/styles.scss
+++ b/src/components/AsideBox/styles.scss
@@ -1,16 +1,29 @@
-.asidebox{
-    width: 500px;
-    height: calc(100vh - 100%);
-    min-height: calc(100vh - 65px);
-    top: 65px;
-    right: 0px;
-    position: fixed;
-    box-shadow: 1px 1px 10px rgb(0, 0, 0, 0.9);
+
     .scroll{
-        height: 100%;
+        height: calc(100vh - 100%);
+        min-height: calc(100vh - 135px);
         overflow-y: scroll;
         position: relative;
+        /* width */
+        &::-webkit-scrollbar {
+            width: 7px;
+        }
+        
+        /* Track */
+
+        
+        /* Handle */
+        &::-webkit-scrollbar-thumb {
+            background: #008cff; 
+            border-radius: 10px;
+        }
+        
+        /* Handle on hover */
+        &::-webkit-scrollbar-thumb:hover {
+            background: #008cff; 
+
+        }
     }
 
-}
+
 
