--- a/src/components/AsideBox/styles.scss
+++ b/src/components/AsideBox/styles.scss
@@ -33,11 +33,67 @@
     #form-edit-table{
         label{
             width: 60px;
+            display: inline-block;
         }
         .input-edit-table{
-            width: 250px;
-            height: 30px;
+            width: 100%;
+            height: 45px;
+            padding-left: 10px;
+        }
+        .area{
+            width: 50%;
+            display: inline-block;
+        }
+        .area-goal{
+            display: inline-block;
+            width: 33.3%;
+        }
+        .select{
+            width: 100%;
+            height: 45px;
+            padding-left: 10px;
         }
     }
     
 
+    .range {
+        position: relative;
+        
+        &__input {
+          width: 400px;
+          background-image: linear-gradient(to right, yellow , green);
+    
+          &::-moz-range-thumb {
+            background: #ccc;
+          }
+          
+          &::-ms-track {
+            background: transparent;
+          }
+          
+          &::-ms-fill-lower {
+            background: #e1e1e1;
+            border-radius: 10px; 
+          }
+          &::-ms-fill-upper {
+            background: #eee;
+          }
+        }
+        
+        &__list {
+          display: flex;
+          justify-content: space-between;
+          height: auto;
+          overflow: hidden;
+          margin-top: 16px; 
+        
+          &__opt:before {
+            content: '';
+            display: block;
+            width: 0;
+            height: auto;
+            padding-left: 3px;
+            text-indent: 0;
+          }
+        }
+      }
